# anchovies

./: .gitignore  README.md  pyproject.toml
src/anchovies/: cli.py  sdk.py
src/anchovies/plugins/core/: dataset.py  file_system.py  filesystem.py  hive_task_store.py  io.py  sql.py
src/anchovies/plugins/core/azure/: blob.py
src/anchovies/sdk/: __init__.py  exceptions.py  overseers.py  queues.py  streams.py  tasks.py
tests/: conftest.py  test_checkpoints.py  test_connections.py  test_execution.py  test_filesystem_ds.py  test_hive_task_store.py  test_register_ds.py  test_results_store.py  test_source_sink.py  test_task_store.py  test_tbl_store.py
tests/azure/: test_blob.py
tests/cli/: test_cli_checkpoints.py
tests/io/: test_buffer.py
tests/sql/: test_dataset.py
